fixed text overflow iss with rec and saved article card text

--- a/src/App.css
+++ b/src/App.css
@@ -156,19 +156,23 @@ body {
   background-color: #f9fafc;
   color: #333F4A;
   border-radius: 5px;
-  padding: 8px 2px;
+  padding: 4px 2px;
   margin: 12px 0px;
   font-size: 12px;
   color: #5C7187;
-
   max-height: 220px;
   min-height: 80px;
-  vertical-align: top;
   width: 98%;
+  flex-direction: column;
+  display: inline-flex;
   justify-content: flex-start;
   align-items: flex-start;
 
+}
 
+.readLaterArticleItemContent {
+  height: 100%;
+  width: 100%;
 }
 
 .recommendedArticleItem {
@@ -186,7 +190,12 @@ body {
   align-items: flex-start;
   alignment: center;
   width: 98%;
+  display: flex;
+}
 
+.recommendedArticleItemContent {
+  height: 100%;
+  width: 100%;
 }
 
 /* .content {
@@ -274,9 +283,10 @@ body {
   font-family: "Open Sans";
   color: #5C7187;
   font-weight: 400;
-  padding: 0.25em 0.25em 0.5em 0.25em;
+  padding: 0.2em 0.25em 0.5em 0.25em;
   display: inline;
   float: left;
+
 
 }
 
@@ -391,7 +401,7 @@ button {
 
 .readNowButtons {
   float: right;
-  /* display: block; */
+  display: inline;
   clear: both;
 }
 
